--- a/index.html
+++ b/index.html
@@ -26,10 +26,14 @@
     section{padding:64px 0}
 
     /* Hero */
-    .hero{text-align:center; padding:140px 20px 90px; background:var(--bg)}
+    .hero{
+      text-align:center;
+      padding:100px 20px 40px; /* 더 내려와서 카드랑 가까워짐 */
+      background:var(--bg);
+    }
     .hero h1{
-      margin:0 0 28px;
-      font-size:3.2rem;
+      margin:0 0 24px;
+      font-size:3rem;
       font-weight:900;
       line-height:1.3;
       letter-spacing:-.02em;
@@ -37,8 +41,8 @@
       color:var(--mocha);
     }
     .hero p.sub{
-      margin:10px 0;
-      font-size:1.25rem;
+      margin:8px 0;
+      font-size:1.2rem;
       font-weight:600;
       color:var(--sub);
       letter-spacing:-.01em;
@@ -46,17 +50,20 @@
     }
 
     /* Story Cards */
-    .story-cards{background:var(--bg); padding:90px 0}
+    .story-cards{background:var(--bg); padding:60px 0}
     .card-grid{
       display:grid;
-      grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-      gap:24px;
+      grid-template-columns:repeat(2,1fr); /* PC 2x2 */
+      gap:32px;
+    }
+    @media (max-width:768px){
+      .card-grid{grid-template-columns:1fr} /* 모바일 1열 */
     }
     .story-card{
       background:#fff;
       border:2px solid var(--mocha);
-      border-radius:18px;
-      padding:28px 22px;
+      border-radius:20px;
+      padding:32px 26px;
       text-align:left;
       box-shadow:0 6px 14px rgba(0,0,0,.06);
       display:flex;
@@ -67,36 +74,36 @@
       display:flex;
       justify-content:space-between;
       align-items:center;
-      font-size:.9rem;
+      font-size:.95rem;
       font-weight:700;
-      margin-bottom:18px;
+      margin-bottom:20px;
       color:var(--mocha);
     }
     .card-top .dots{font-size:1rem; letter-spacing:4px}
     .story-card h2{
-      font-size:1.45rem;
+      font-size:1.5rem;
       font-weight:900;
       margin:0 0 20px;
       line-height:1.4;
       color:var(--mocha);
     }
     .story-card p{
-      font-size:1.1rem;
-      line-height:1.7;
-      margin:0 0 22px;
+      font-size:1.15rem;
+      line-height:1.8;
+      margin:0 0 24px;
       color:var(--ink);
     }
     .story-card ul{
       list-style:none; padding:0; margin:0;
-      display:flex; flex-direction:column; gap:14px
+      display:flex; flex-direction:column; gap:16px;
     }
     .story-card li{
       border:2px solid var(--mocha);
-      border-radius:14px;
-      padding:12px 16px;
-      font-size:1.05rem;
+      border-radius:16px;
+      padding:14px 18px;
+      font-size:1.1rem;
       font-weight:600;
-      line-height:1.5;
+      line-height:1.6;
       background:#fff;
       transition:.2s;
     }
