--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
     .story-cards{background:var(--bg); padding:60px 0}
     .card-grid{
       display:grid;
-      grid-template-columns:repeat(2,1fr);
+      grid-template-columns:repeat(3,1fr);
       gap:32px;
     }
-    @media (max-width:768px){
+    @media (max-width:1024px){
       .card-grid{grid-template-columns:1fr}
     }
     .story-card{
@@ -102,7 +102,7 @@
       border:2px solid var(--mocha);
       border-radius:16px;
       padding:14px 18px;
-      font-size:1.1rem;
+      font-size:1.05rem;
       font-weight:600;
       line-height:1.6;
       background:#fff;
@@ -200,10 +200,10 @@
         </div>
         <h2>"선함엔 기준이 필요해"</h2>
         <ul>
-          <li>✓ 구조자는 30% 직접 부담</li>
-          <li>✓ 후원금은 병원에 바로 지급</li>
+          <li>✓ 구조자는 30% 직접 부담 (도덕적헤이방지)</li>
+          <li>✓ 후원금은 병원에 바로 지급 (개발 중)</li>
           <li>✓ 후기와 치료 전후 변화 공유</li>
-          <li>✓ 3개월간 모든 후원 기록 공개</li>
+          <li>✓ 치료영수증 업로드 필수</li>
         </ul>
       </div>
 
@@ -213,27 +213,11 @@
           <span class="brand">PROJECT PAW</span>
           <span class="dots">● ● ●</span>
         </div>
-        <h2>이렇게 만들거야</h2>
-        <ul>
-          <li>✓ 발바닥은 따뜻한 약속</li>
-          <li>✓ 후원은 쉽고, 마음은 깊게</li>
-          <li>✓ 이야기가 먼저 닿는 구조</li>
-          <li>✓ 로그인은 어렵지 않아야 해</li>
-          <li>✓ 기부는 쉽고 투명해야 해</li>
-        </ul>
-      </div>
-
-      <!-- Card 4 -->
-      <div class="story-card">
-        <div class="card-top">
-          <span class="brand">PROJECT PAW</span>
-          <span class="dots">● ● ●</span>
-        </div>
-        <h2>고양이보다 부드럽게,<br/>해파리보다 투명하게.</h2>
+        <h2>고양이보다 부드럽게,<br/>해파리보다 투명하게</h2>
         <ul>
           <li>✓ 구조자·후원자 실시간 소통</li>
-          <li>✓ 지역별 PAW 병원 (구조병원 LIST)</li>
-          <li>✓ 모금액 전액 전달</li>
+          <li>✓ 지역별 PAW 병원 (구조병원 LIST) (개발 중)</li>
+          <li>✓ 모금액 전액 전달 (PG연결 전까지 단톡방으로 연결)</li>
           <li>✓ 100% 재능기부 운영 플랫폼</li>
           <li>✓ 한 없이 투명에 가까운 PAW</li>
         </ul>
