--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     .story-cards{background:var(--bg); padding:60px 0}
     .card-grid{
       display:grid;
-      grid-template-columns:repeat(3,1fr);
+      grid-template-columns:repeat(2,1fr); /* PC 2x2 */
       gap:32px;
     }
     @media (max-width:1024px){
@@ -220,6 +220,21 @@
           <li>✓ 모금액 전액 전달 (PG연결 전까지 단톡방으로 연결)</li>
           <li>✓ 100% 재능기부 운영 플랫폼</li>
           <li>✓ 한 없이 투명에 가까운 PAW</li>
+        </ul>
+      </div>
+
+      <!-- Card 4 -->
+      <div class="story-card">
+        <div class="card-top">
+          <span class="brand">PROJECT PAW</span>
+          <span class="dots">● ● ●</span>
+        </div>
+        <h2>함께하자, 등록해줘, 연결할게 ✅</h2>
+        <ul>
+          <li>✓ 구조 후 병원비, 카드 명세서가 두렵던 순간에도</li>
+          <li>✓ 국가지원 못 받는 중성화, 혼자 감당하지 말고</li>
+          <li>✓ 입양 직후, 첫 건강검진과 예방접종이 막막할 때</li>
+          <li>✓ 투명한 영수증으로 증명되는 모든 보호·구조 활동까지</li>
         </ul>
       </div>
 
