--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     /* Hero */
     .hero{
       text-align:center;
-      padding:100px 20px 40px;
+      padding:120px 20px 60px; /* 🔽 headline 더 내려옴 */
       background:var(--bg);
     }
     .hero h1{
@@ -130,6 +130,15 @@
     .project-card img{width:100%; height:180px; object-fit:cover; border-radius:10px}
     .project-card h3{margin:8px 0 4px; font-size:1.15rem; font-weight:700}
     .muted{color:var(--muted); font-size:.9rem}
+
+    /* 📱 Mobile readability tweaks for project cards */
+    @media (max-width:768px){
+      .grid{grid-template-columns:1fr; gap:20px}
+      .project-card{padding:18px}
+      .project-card img{height:160px}
+      .project-card h3{font-size:1.2rem}
+      .project-card .muted{font-size:1rem; line-height:1.5}
+    }
 
     /* Floating CTA */
     .cta-fab{
