--- a/project.html
+++ b/project.html
@@ -8,63 +8,70 @@
 <link rel="stylesheet" href="app.min.css"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 <style>
+  body{background:#fafafa}
   .wrap{max-width:860px;margin:0 auto;padding:20px 16px}
-  h1{font-size:1.6rem;font-weight:800;margin-bottom:8px}
-  .muted{color:#6b7280;font-size:.9rem}
-  /* 이미지 영역 */
-  .slider{position:relative;overflow:hidden;border-radius:12px;margin:20px 0;box-shadow:0 4px 10px rgba(0,0,0,0.05);max-height:240px}
-  .slider img{width:100%;height:240px;object-fit:cover;display:none}
-  .slider img.active{display:block}
-  .slider-nav{position:absolute;top:50%;width:100%;display:flex;justify-content:space-between;transform:translateY(-50%)}
-  .slider-nav button{background:rgba(0,0,0,.5);color:#fff;border:none;padding:6px 10px;border-radius:6px;cursor:pointer}
-  /* 공유 버튼 */
-  .share-buttons{margin:20px 0;display:flex;gap:12px;flex-wrap:wrap}
+
+  /* Hero */
+  .hero-card{
+    background:#fff;
+    border-radius:20px;
+    overflow:hidden;
+    box-shadow:0 6px 14px rgba(0,0,0,0.08);
+    margin-bottom:24px;
+  }
+  .hero-card img{width:100%;height:280px;object-fit:cover}
+  .hero-body{padding:20px}
+  .hero-body h1{font-size:1.6rem;font-weight:900;margin:0 0 6px}
+  .hero-body .muted{color:#6b7280;margin-bottom:12px}
+  .progress{background:#e5e7eb;height:18px;border-radius:12px;overflow:hidden;margin:10px 0}
+  .progress .bar{height:100%;background:#A47864;color:#fff;text-align:center;font-size:.8rem;font-weight:600}
+  .stats{display:flex;justify-content:space-between;font-size:.95rem;color:#444;margin-top:6px}
+  .hero-body .btn.primary{
+    display:block;margin-top:16px;text-align:center;padding:12px 16px;
+    background:#A47864;color:#fff;border-radius:12px;font-weight:700;font-size:1rem;
+  }
+  .hero-body .btn.primary:hover{background:#8b6452}
+
+  /* Section cards */
+  .section-card{
+    background:#fff;
+    border-radius:16px;
+    padding:24px;
+    margin-top:20px;
+    box-shadow:0 4px 10px rgba(0,0,0,0.05);
+  }
+  .section-card h2{font-size:1.2rem;font-weight:800;margin-bottom:12px;color:#A47864}
+  .section-card p{font-size:1.05rem;line-height:1.7;color:#222}
+
+  /* Info */
+  .info-card p{margin:6px 0;font-size:.95rem;color:#444}
+
+  /* 공유 */
+  .share-buttons{display:flex;gap:12px;flex-wrap:wrap;margin-top:12px}
   .share-buttons button{
     flex:1;min-width:120px;
     display:flex;align-items:center;justify-content:center;
     gap:8px;padding:12px 18px;
     border-radius:12px;font-weight:600;font-size:.95rem;
-    cursor:pointer;border:none;transition:all .2s ease;
+    cursor:pointer;border:none;transition:.2s;
   }
-  .share-buttons button:hover{transform:translateY(-2px);box-shadow:0 4px 8px rgba(0,0,0,0.15)}
+  .share-buttons button:hover{transform:translateY(-2px)}
   .share-kakao{background:#FEE500;color:#111}
   .share-insta{background:#E4405F;color:#fff}
   .share-copy{background:#6b7280;color:#fff}
-  /* 상세설명 카드 */
-  .project-card{
-    background:#fff;
-    border-radius:16px;
-    padding:28px;
-    margin-top:24px;
-    box-shadow:0 3px 8px rgba(0,0,0,0.06);
+
+  /* 하단 CTA dock */
+  .cta-dock{
+    position:fixed;bottom:16px;right:16px;z-index:50;
+    display:flex;flex-direction:column;gap:10px;
+    filter:drop-shadow(0 6px 12px rgba(0,0,0,0.15));
   }
-  .project-card p{
-    font-size:1.05rem;
-    line-height:1.6;
-    margin-bottom:14px;
+  .cta-dock a{
+    background:#A47864;color:#fff;
+    padding:12px 18px;border-radius:14px;
+    font-weight:700;font-size:.95rem;text-align:center;
   }
-  /* 정보 카드 */
-  .info-card{
-    background:#fff;
-    border-radius:16px;
-    padding:20px;
-    margin-top:20px;
-    box-shadow:0 3px 8px rgba(0,0,0,0.08);
-  }
-  .info-card p{margin:6px 0;font-size:.95rem}
-  .progress-wrap{margin:14px 0}
-  .progress{background:#e5e7eb;border-radius:12px;overflow:hidden;height:20px}
-  .progress-bar{
-    height:100%;
-    background:#007bff;
-    color:#fff;
-    text-align:center;
-    font-size:.85rem;
-    font-weight:600;
-    line-height:20px;
-    width:0%; /* 항상 0% */
-  }
-  .btn.kakao{background:#FEE500;color:#111;padding:12px 20px;border-radius:12px;display:inline-block;font-weight:600;margin-top:16px;text-align:center}
+  .cta-dock a:hover{background:#8b6452}
 </style>
 </head>
 <body>
@@ -73,6 +80,11 @@
   <main class="wrap">
     <div id="project-detail"><div class="muted">불러오는 중...</div></div>
   </main>
+
+  <!-- CTA Dock -->
+  <div class="cta-dock" id="ctaDock" style="display:none">
+    <a id="ctaBtn" target="_blank">참여하기</a>
+  </div>
 
   <div data-include="footer"></div>
 
@@ -85,17 +97,20 @@
     injectLayout({ active:'project' });
 
     const $detail = document.getElementById('project-detail');
+    const $ctaDock = document.getElementById('ctaDock');
+    const $ctaBtn = document.getElementById('ctaBtn');
+
     const fmt = n => Number(n||0).toLocaleString('ko-KR');
 
     function candidatesOf(p){
       const out = [];
       const push = v => { if (typeof v === 'string' && v.trim()) out.push(v.trim()); };
-      ['representativeImageUrl','representativeImage','representImg','coverUrl','coverURL','cover','mainImageUrl','mainImage','thumbnailUrl','thumbnail','thumbUrl','image','imageUrl','photo','photoUrl']
+      ['representativeImageUrl','coverUrl','mainImageUrl','thumbnailUrl','image','photo']
         .forEach(k => push(p[k]));
-      ['galleryUrls','images','photos','pictures','media','attachments','files'].forEach(k => {
-        const arr = p[k]; if (Array.isArray(arr)) arr.forEach(it => {
-          if (typeof it === 'string') push(it);
-          else if (it && (it.url || it.downloadUrl || it.path)) push(it.url || it.downloadUrl || it.path);
+      ['galleryUrls','images','photos','files'].forEach(k => {
+        const arr = p[k]; if(Array.isArray(arr)) arr.forEach(it=>{
+          if(typeof it==='string') push(it);
+          else if(it && (it.url||it.path)) push(it.url||it.path);
         });
       });
       return out;
@@ -106,110 +121,88 @@
       let v = String(raw).trim();
       if (/^(https?:|data:|blob:)/i.test(v)) return v;
       if (v.startsWith('/')) v = v.slice(1);
-      try {
-        return await getDownloadURL(ref(storage, v));
-      } catch (e) {
-        console.warn('[project] getDownloadURL 실패:', v, e?.message || e);
-        return null;
-      }
+      try { return await getDownloadURL(ref(storage, v)); }
+      catch { return null; }
     }
 
     async function galleryHttpUrls(p){
       const cands = candidatesOf(p);
-      const urls  = await Promise.all(cands.map(toHttpUrl));
+      const urls = await Promise.all(cands.map(toHttpUrl));
       const uniq = [], seen = new Set();
-      for (const u of urls) { if (u && !seen.has(u)) { seen.add(u); uniq.push(u); } }
+      for(const u of urls){ if(u && !seen.has(u)){ seen.add(u); uniq.push(u); } }
       return uniq.length ? uniq : ['img/placeholder.svg'];
     }
 
     function getId(){ return new URLSearchParams(location.search).get("id"); }
 
-    function renderSlider(imgs){
-      if(!imgs || !imgs.length) return '';
-      if(imgs.length === 1){
-        return `<div class="slider"><img class="active" src="${imgs[0]}" alt="project image"/></div>`;
-      }
-      return `
-        <div class="slider">
-          ${imgs.map((u,i)=>`<img src="${u}" class="${i===0?'active':''}" alt="gallery ${i+1}"/>`).join('')}
-          <div class="slider-nav">
-            <button id="prevBtn">◀</button>
-            <button id="nextBtn">▶</button>
-          </div>
-        </div>`;
-    }
-
     async function render(){
       const id = getId();
-      if(!id){ $detail.innerHTML = '<div class="muted">잘못된 접근입니다.</div>'; return; }
+      if(!id){ $detail.innerHTML='<div class="muted">잘못된 접근입니다.</div>'; return; }
 
       try{
         const p = await getProjectById(id);
-        if(!p){ $detail.innerHTML = '<div class="muted">존재하지 않는 프로젝트입니다.</div>'; return; }
+        if(!p){ $detail.innerHTML='<div class="muted">존재하지 않는 프로젝트입니다.</div>'; return; }
 
         const imgs = await galleryHttpUrls(p);
-
-        const goal = Number(p.goalAmount || 0);
-        const current = 0;   // 모금액 없음 → 임시 0
-        const rate = 0;      // 달성률 항상 0%
+        const goal = Number(p.goalAmount||0);
+        const current = 0; // 모금액 연동 전이라 0
+        const rate = goal ? Math.floor(current/goal*100) : 0;
 
         $detail.innerHTML = `
-          <h1>${p.name ?? '(이름 없음)'}</h1>
-          <div class="muted">구조자: ${p.rescuerName ?? ''}</div>
-          ${renderSlider(imgs)}
-
-          <!-- 공유 버튼 -->
-          <div class="share-buttons">
-            <button class="share-kakao" id="shareKakao"><i class="fa-solid fa-comment"></i> 카카오톡</button>
-            <button class="share-insta" id="shareInsta"><i class="fa-brands fa-instagram"></i> 인스타그램</button>
-            <button class="share-copy" id="shareCopy"><i class="fa-solid fa-link"></i> 링크복사</button>
-          </div>
-
-          <!-- 상세설명 -->
-          <div class="project-card">
-            <p>${p.description ?? ''}</p>
-          </div>
-
-          <!-- 프로젝트 정보 박스 -->
-          <div class="info-card">
-            <p><strong>목표 금액:</strong> ${fmt(goal)}원</p>
-            <p><strong>현재 모금:</strong> ${fmt(current)}원</p>
-            <div class="progress-wrap">
-              <div class="progress">
-                <div class="progress-bar">0%</div>
+          <!-- Hero -->
+          <section class="hero-card">
+            <img src="${imgs[0]}" alt="cover"/>
+            <div class="hero-body">
+              <h1>${p.name ?? '(이름 없음)'}</h1>
+              <div class="muted">구조자: ${p.rescuerName ?? '익명'}</div>
+              <div class="progress"><div class="bar" style="width:${rate}%">${rate}%</div></div>
+              <div class="stats">
+                <span>목표 ${fmt(goal)}원</span>
+                <span>현재 ${fmt(current)}원</span>
               </div>
+              ${p.registrantKakaoId ? `<a href="https://open.kakao.com/o/${p.registrantKakaoId}" target="_blank" class="btn primary">참여하기</a>` : ''}
             </div>
+          </section>
+
+          <!-- Story -->
+          <section class="section-card">
+            <h2>스토리</h2>
+            <p>${(p.description||'').replace(/\n/g,'<br/>')}</p>
+          </section>
+
+          <!-- Info -->
+          <section class="section-card info-card">
+            <h2>프로젝트 정보</h2>
             <p><strong>구조자 부담금:</strong> ${fmt(p.rescuerContribution)}원</p>
-            <p><strong>지지자 수:</strong> ${fmt(p.supportersCount)}</p>
-            ${p.registrantKakaoId ? `<a href="https://open.kakao.com/o/${p.registrantKakaoId}" target="_blank" class="btn kakao">카카오톡으로 참여하기</a>` : ''}
-          </div>
+            <p><strong>지지자 수:</strong> ${fmt(p.supportersCount||0)}명</p>
+            <p><strong>승인 상태:</strong> ${p.adminApproved?'승인됨':'대기중'}</p>
+          </section>
+
+          <!-- 공유 -->
+          <section class="section-card">
+            <h2>공유하기</h2>
+            <div class="share-buttons">
+              <button class="share-kakao" id="shareKakao"><i class="fa-solid fa-comment"></i> 카카오톡</button>
+              <button class="share-insta" id="shareInsta"><i class="fa-brands fa-instagram"></i> 인스타그램</button>
+              <button class="share-copy" id="shareCopy"><i class="fa-solid fa-link"></i> 링크복사</button>
+            </div>
+          </section>
         `;
 
-        // 슬라이더 동작
-        const sliderImgs = $detail.querySelectorAll('.slider img');
-        if(sliderImgs.length){
-          let idx = 0;
-          const prev = document.getElementById('prevBtn');
-          const next = document.getElementById('nextBtn');
-          const show = (i) => sliderImgs.forEach((img,j)=>img.classList.toggle('active', j===i));
-          prev?.addEventListener('click', ()=>{ idx = (idx-1+sliderImgs.length)%sliderImgs.length; show(idx); });
-          next?.addEventListener('click', ()=>{ idx = (idx+1)%sliderImgs.length; show(idx); });
+        // 하단 CTA dock 연결
+        if(p.registrantKakaoId){
+          $ctaDock.style.display='flex';
+          $ctaBtn.href=`https://open.kakao.com/o/${p.registrantKakaoId}`;
+          $ctaBtn.textContent='참여하기';
         }
 
-        // 공유 버튼 이벤트
-        document.getElementById("shareCopy")?.addEventListener("click", () => {
-          navigator.clipboard.writeText(window.location.href).then(()=>alert("링크가 복사되었습니다!"));
-        });
-        document.getElementById("shareKakao")?.addEventListener("click", () => {
-          window.open("https://sharer.kakao.com/talk/friends/picker/link","_blank");
-        });
-        document.getElementById("shareInsta")?.addEventListener("click", () => {
-          alert("인스타그램은 직접 URL을 복사해 공유해주세요.");
-        });
-
+        // 공유 버튼
+        document.getElementById("shareCopy")?.addEventListener("click",()=>navigator.clipboard.writeText(window.location.href).then(()=>alert("링크 복사됨!")));
+        document.getElementById("shareKakao")?.addEventListener("click",()=>window.open("https://sharer.kakao.com/talk/friends/picker/link","_blank"));
+        document.getElementById("shareInsta")?.addEventListener("click",()=>alert("인스타그램은 직접 URL을 복사해 공유해주세요."));
       }catch(e){
         console.error(e);
-        $detail.innerHTML = '<div class="muted">프로젝트를 불러오지 못했습니다.</div>';
+        $detail.innerHTML='<div class="muted">프로젝트를 불러오지 못했습니다.</div>';
       }
     }
 
